Network.yaml
---
Parameters:
  
  BationInstanceType:
    Description: This gives the options available for Bastion Instance;
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.large
  VamsiEc2Key:
    Description: This is the Ec2-Key that is needed
    Type: String
    Default: Vamsi-Ohio-EC2-Key
  BastionImage:
    Description: This is the image for Bastion Instance.
    Type: String
    Default: ami-04328208f4f0cf1fe

Resources:
  
  vamsicfvpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.100.0.0/16
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: vamsicfvpc
  vamcpubsubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-2a
      VpcId: 
        Ref: vamsicfvpc
      CidrBlock: 10.100.10.0/24
      Tags:
        - Key: Name
          Value: vamcpubsubnet1
  vamcpubsubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-2b
      VpcId: 
        Ref: vamsicfvpc
      CidrBlock: 10.100.11.0/24
      Tags:
        - Key: Name
          Value: vamcpubsubnet2
  vamcpubsubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-2c
      VpcId: 
        Ref: vamsicfvpc
      CidrBlock: 10.100.12.0/24
      Tags:
        - Key: Name
          Value: vamcpubsubnet3
  vamcpvtsubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-2a
      VpcId:
        Ref: vamsicfvpc
      CidrBlock: 10.100.0.0/24
      Tags:
        - Key: Name
          Value: vamcpvtsubnet1
  vamcpvtsubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-2b
      VpcId:
        Ref: vamsicfvpc
      CidrBlock: 10.100.1.0/24
      Tags:
        - Key: Name
          Value: vamcpvtsubnet2
  vamcpvtsubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-2c
      VpcId:
        Ref: vamsicfvpc
      CidrBlock: 10.100.2.0/24
      Tags:
        - Key: Name
          Value: vamcpvtsubnet3
  
  vamsicfigw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: vamsicfigw
  vamsiAttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: 
        Ref: vamsicfvpc
      InternetGatewayId: 
        Ref: vamsicfigw
  
  vamsibastionsg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName:  vamsibastionsg
      GroupDescription: This is the SG for bastion which would be in a PVT subnet.
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 12.0.74.58/32
      VpcId:
        Ref: vamsicfvpc
      Tags:
        - Key: Name
          Value: vamsibastionsg
  
  vamsicfpubrttable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: vamsicfvpc
      Tags:
        - Key: keyname
          Value: vamsicfpubrttable
  vamsicfpubrt:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: 
        Ref: vamsicfpubrttable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: vamsicfigw
  vamcpubrtassoc1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: vamcpubsubnet1
      RouteTableId: 
        Ref: vamsicfpubrttable
  vamcpubrtassoc2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: vamcpubsubnet2
      RouteTableId: 
        Ref: vamsicfpubrttable
  vamcpubrtassoc3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: vamcpubsubnet3
      RouteTableId: 
        Ref: vamsicfpubrttable
  
  vamsicfpvtrttable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: vamsicfvpc
      Tags:
        - Key: keyname
          Value: vamsicfpvtrttable
  vamsicfpvtrt:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: 
        Ref: vamsicfpvtrttable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: vamsicfnatgw
  vamcpvtrtassoc1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: 
        Ref: vamcpvtsubnet1
      RouteTableId: 
        Ref: vamsicfpvtrttable
  vamcpvtrtassoc2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: 
        Ref: vamcpvtsubnet2
      RouteTableId: 
        Ref: vamsicfpvtrttable
  vamcpvtrtassoc3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: 
        Ref: vamcpvtsubnet3
      RouteTableId: 
        Ref: vamsicfpvtrttable
  
  vamsicfnatgw:
    DependsOn: vamsiAttachGateway
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - vamsiEIP
        - AllocationId
      SubnetId:
        Ref: vamcpubsubnet1
      Tags:
        - Key: Name
          Value: vamsicfnatgateway
  vamsiEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vamsicfvpc
  

  vamcbastion:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: 
        Ref: VamsiEc2Key
      ImageId:
        Ref: BastionImage
      InstanceType: 
        Ref: BationInstanceType
      Monitoring: false
      UserData:
        Fn::Base64: 
          !Sub |
            #!/bin/bash -ex 
            yum update -y
            yum install httpd -y
            service httpd start
            chkconfig httpd on
      NetworkInterfaces: 
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet:
            - !GetAtt vamsibastionsg.GroupId
          SubnetId: 
            Ref: vamcpvtsubnet2
      Tags:
        - Key: Name
          Value: vamsibastion
  
Outputs:

  VamsiVPCOp:
    Description: This is the output of VPC, gives ID of VPC.
    Value: 
      Ref: vamsicfvpc
    Export:
      Name: VamsiVPCOp
  Vamsipvtsn1Op:
    Description: This is the output of VPC, gives ID of VPC.
    Value: 
      Ref: vamcpvtsubnet1
    Export:
      Name: Vamsipvtsn1Op
  Vamsipvtsn2Op:
    Description: This is the output of VPC, gives ID of VPC.
    Value: 
      Ref: vamcpvtsubnet2
    Export:
      Name: Vamsipvtsn2Op
  Vamsipvtsn3Op:
    Description: This is the output of VPC, gives ID of VPC.
    Value: 
      Ref: vamcpvtsubnet3
    Export:
      Name: Vamsipvtsn3Op
  Vamsipubsn1Op:
    Description: This is the output of VPC, gives ID of VPC.
    Value: 
      Ref: vamcpubsubnet1
    Export:
      Name: Vamsipubsn1Op
  Vamsipubsn2Op:
    Description: This is the output of VPC, gives ID of VPC.
    Value: 
      Ref: vamcpubsubnet2
    Export:
      Name: Vamsipubsn2Op
  Vamsipubsn3Op:
    Description: This is the output of VPC, gives ID of VPC.
    Value: 
      Ref: vamcpubsubnet3
    Export:
      Name: Vamsipubsn3Op
  
 
  Vamsibastionip:
    Description: This is the output of Bastion, gives Public IP of Bastion.
    Value: 
      !GetAtt vamcbastion.PublicIp
    Export:
      Name: Vamsibastionip
  VamsibastionSGOp:
    Description: This is the output of Bastion, gives ID of Bastion SG.
    Value: 
      !GetAtt vamsibastionsg.GroupId
    Export:
      Name: VamsibastionSGOp
